// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders xliff from markdown renders autolink wrapped in <x> tags 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"file.ext\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"file.skl\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"0\\">
        <source>Предложение номер один <x ctype=\\"link_autolink\\" equiv-text=\\"&lt;https://www.google.com&gt;\\" id=\\"g-test\\"/>.</source>
      </trans-unit>
      <trans-unit id=\\"1\\">
        <source>Предложение номер два <x ctype=\\"link_autolink\\" equiv-text=\\"&lt;https://www.youtube.com&gt;\\" id=\\"g-test\\"/>.</source>
      </trans-unit>
    </body>
  </file>
</xliff>"
`;

exports[`renders xliff from markdown renders code wrapped in <x> tag 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"file.ext\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"file.skl\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"0\\">
        <source>Предложение номер <x ctype=\\"code_open\\" equiv-text=\\"\`\\" id=\\"g-test\\"/>один<x ctype=\\"code_close\\" equiv-text=\\"\`\\" id=\\"g-test\\"/>.</source>
      </trans-unit>
      <trans-unit id=\\"1\\">
        <source>Предложение номер <x ctype=\\"code_open\\" equiv-text=\\"\`\\" id=\\"g-test\\"/>два<x ctype=\\"code_close\\" equiv-text=\\"\`\\" id=\\"g-test\\"/>.</source>
      </trans-unit>
    </body>
  </file>
</xliff>"
`;

exports[`renders xliff from markdown renders em wrapped in <x> tags 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"file.ext\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"file.skl\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"0\\">
        <source>Предложение номер <g ctype=\\"italic\\" equiv-text=\\"*{{text}}*\\" id=\\"g-test\\" x-begin=\\"*\\" x-end=\\"*\\">один</g>.</source>
      </trans-unit>
      <trans-unit id=\\"1\\">
        <source>Предложение номер <g ctype=\\"italic\\" equiv-text=\\"*{{text}}*\\" id=\\"g-test\\" x-begin=\\"*\\" x-end=\\"*\\">два</g>.</source>
      </trans-unit>
    </body>
  </file>
</xliff>"
`;

exports[`renders xliff from markdown renders file wrapped in <x> tags 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"file.ext\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"file.skl\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"0\\">
        <source>Sentence with <x ctype=\\"file_open\\" equiv-text=\\"{%\\" id=\\"g-test\\"/><x ctype=\\"file_src\\" equiv-text=\\"src=&quot;path/to/file&quot;\\" id=\\"g-test\\"/><x ctype=\\"file_name_open\\" equiv-text=\\"name=&quot;\\" id=\\"g-test\\"/>readme.md<x ctype=\\"file_name_close\\" equiv-text=\\"&quot;\\" id=\\"g-test\\"/><x ctype=\\"file_referrerpolicy\\" equiv-text=\\"referrerpolicy=&quot;no-referrer&quot;\\" id=\\"g-test\\"/><x ctype=\\"file_rel\\" equiv-text=\\"rel=&quot;noopener&quot;\\" id=\\"g-test\\"/><x ctype=\\"file_target\\" equiv-text=\\"target=&quot;_blank&quot;\\" id=\\"g-test\\"/><x ctype=\\"file_type\\" equiv-text=\\"type=&quot;text/plain&quot;\\" id=\\"g-test\\"/><x ctype=\\"file_close\\" equiv-text=\\"%}\\" id=\\"g-test\\"/>.</source>
      </trans-unit>
    </body>
  </file>
</xliff>"
`;

exports[`renders xliff from markdown renders heading with anchors wrapped in <x> tags 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"file.ext\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"file.skl\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"0\\">
        <source>Heading with anchors</source>
      </trans-unit>
    </body>
  </file>
</xliff>"
`;

exports[`renders xliff from markdown renders html wrapped in <x> tags 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"file.ext\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"file.skl\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"0\\">
        <source>Sentence<x ctype=\\"html_inline\\" equiv-text=\\"&lt;br&gt;\\" id=\\"g-test\\"/>with <x ctype=\\"html_inline\\" equiv-text=\\"&lt;b&gt;\\" id=\\"g-test\\"/>html<x ctype=\\"html_inline\\" equiv-text=\\"&lt;/b&gt;\\" id=\\"g-test\\"/>.</source>
      </trans-unit>
    </body>
  </file>
</xliff>"
`;

exports[`renders xliff from markdown renders image all attributes wrapped in <x> tags 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"file.ext\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"file.skl\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"0\\">
        <source>hint</source>
      </trans-unit>
      <trans-unit id=\\"1\\">
        <source>hint</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>hint</source>
      </trans-unit>
      <trans-unit id=\\"3\\">
        <source>hint</source>
      </trans-unit>
      <trans-unit id=\\"4\\">
        <source>Sentence <g ctype=\\"image\\" equiv-text=\\"![{{text}}](image.png &quot;%%%0%%%&quot; =100x100)\\" id=\\"g-test\\" x-begin=\\"![\\" x-end=\\"](image.png &quot;%%%0%%%&quot; =100x100)\\">image</g>.</source>
      </trans-unit>
      <trans-unit id=\\"5\\">
        <source>Sentence <g ctype=\\"image\\" equiv-text=\\"![{{text}}](image.png &quot;%%%1%%%&quot; =x100)\\" id=\\"g-test\\" x-begin=\\"![\\" x-end=\\"](image.png &quot;%%%1%%%&quot; =x100)\\">image</g>.</source>
      </trans-unit>
      <trans-unit id=\\"6\\">
        <source>Sentence <g ctype=\\"image\\" equiv-text=\\"![{{text}}](image.png &quot;%%%2%%%&quot; =100x)\\" id=\\"g-test\\" x-begin=\\"![\\" x-end=\\"](image.png &quot;%%%2%%%&quot; =100x)\\">image</g>.</source>
      </trans-unit>
      <trans-unit id=\\"7\\">
        <source>Sentence <g ctype=\\"image\\" equiv-text=\\"![{{text}}](image.png =100x100)\\" id=\\"g-test\\" x-begin=\\"![\\" x-end=\\"](image.png =100x100)\\">image</g>.</source>
      </trans-unit>
      <trans-unit id=\\"8\\">
        <source>Sentence <g ctype=\\"image\\" equiv-text=\\"![{{text}}](image.png &quot;%%%3%%%&quot;)\\" id=\\"g-test\\" x-begin=\\"![\\" x-end=\\"](image.png &quot;%%%3%%%&quot;)\\">image</g>.</source>
      </trans-unit>
      <trans-unit id=\\"9\\">
        <source>Sentence <g ctype=\\"image\\" equiv-text=\\"![{{text}}](image.png)\\" id=\\"g-test\\" x-begin=\\"![\\" x-end=\\"](image.png)\\">image</g>.</source>
      </trans-unit>
      <trans-unit id=\\"10\\">
        <source>Sentence <g ctype=\\"image\\" equiv-text=\\"![{{text}}]()\\" id=\\"g-test\\" x-begin=\\"![\\" x-end=\\"]()\\"></g>.</source>
      </trans-unit>
    </body>
  </file>
</xliff>"
`;

exports[`renders xliff from markdown renders link with multiple sentences inside text part and title part wrapped in <x> tags 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"file.ext\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"file.skl\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"0\\">
        <source>Link title sentence one.</source>
      </trans-unit>
      <trans-unit id=\\"1\\">
        <source>Link title sentence two!</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>Link text sentence one!</source>
      </trans-unit>
      <trans-unit id=\\"3\\">
        <source>Link text sentence Two</source>
      </trans-unit>
    </body>
  </file>
</xliff>"
`;

exports[`renders xliff from markdown renders links wrapped in <x> tags 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"file.ext\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"file.skl\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"0\\">
        <source>one</source>
      </trans-unit>
      <trans-unit id=\\"1\\">
        <source>Предложение номер <g ctype=\\"link\\" equiv-text=\\"[{{text}}](one.md &quot;%%%0%%%&quot;)\\" id=\\"g-test\\" x-begin=\\"[\\" x-end=\\"](one.md &quot;%%%0%%%&quot;)\\">один</g>.</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>Предложение номер <g ctype=\\"link\\" equiv-text=\\"[{{text}}](two.md)\\" id=\\"g-test\\" x-begin=\\"[\\" x-end=\\"](two.md)\\">два</g>.</source>
      </trans-unit>
    </body>
  </file>
</xliff>"
`;

exports[`renders xliff from markdown renders liquid conditions wrapped in <x> tags 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"file.ext\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"file.skl\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"0\\">
        <source>Sentence with <x ctype=\\"liquid_Literal\\" equiv-text=\\"{% if var == &quot;val&quot; %}\\" id=\\"g-test\\"/> val<x ctype=\\"liquid_Literal\\" equiv-text=\\"{% else %}\\" id=\\"g-test\\"/> other val<x ctype=\\"liquid_Literal\\" equiv-text=\\"{% endif %}\\" id=\\"g-test\\"/>.</source>
      </trans-unit>
      <trans-unit id=\\"1\\">
        <source>A<x ctype=\\"liquid_Literal\\" equiv-text=\\"{% else %}\\" id=\\"g-test\\"/> B<x ctype=\\"liquid_Literal\\" equiv-text=\\"{% endif %}\\" id=\\"g-test\\"/> Point.</source>
      </trans-unit>
    </body>
  </file>
</xliff>"
`;

exports[`renders xliff from markdown renders liquid filters wrapped in <x> tags 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"file.ext\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"file.skl\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"0\\">
        <source>Sentence with filter <x ctype=\\"liquid_Filter\\" equiv-text=\\"{{ users | length }}\\" id=\\"g-test\\"/>.</source>
      </trans-unit>
      <trans-unit id=\\"1\\">
        <source><x ctype=\\"liquid_Filter\\" equiv-text=\\"{{user | capitalize}}\\" id=\\"g-test\\"/> starts with filter.</source>
      </trans-unit>
    </body>
  </file>
</xliff>"
`;

exports[`renders xliff from markdown renders liquid filters wrapped in <x> tags inside tables 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"file.ext\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"file.skl\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"0\\">
        <source>Heading one</source>
      </trans-unit>
      <trans-unit id=\\"1\\">
        <source>Heading two</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>Cell with <x ctype=\\"liquid_Filter\\" equiv-text=\\"{{ variable | length }}\\" id=\\"g-test\\"/></source>
      </trans-unit>
      <trans-unit id=\\"3\\">
        <source>Cell with <x ctype=\\"liquid_Variable\\" equiv-text=\\"{{ variable }}\\" id=\\"g-test\\"/></source>
      </trans-unit>
    </body>
  </file>
</xliff>"
`;

exports[`renders xliff from markdown renders liquid functions wrapped in <x> tags 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"file.ext\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"file.skl\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"0\\">
        <source>Sentence with function <x ctype=\\"liquid_Function\\" equiv-text=\\"{{ user.name.slice(1, 2) }}\\" id=\\"g-test\\"/>.</source>
      </trans-unit>
      <trans-unit id=\\"1\\">
        <source><x ctype=\\"liquid_Function\\" equiv-text=\\"{{ user.name.slice(1, 2) }}\\" id=\\"g-test\\"/> starts with function.</source>
      </trans-unit>
    </body>
  </file>
</xliff>"
`;

exports[`renders xliff from markdown renders liquid loops wrapped in <x> tags 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"file.ext\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"file.skl\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"0\\">
        <source>Sentence <x ctype=\\"liquid_Literal\\" equiv-text=\\"{% for x in xs %}\\" id=\\"g-test\\"/>x<x ctype=\\"liquid_Literal\\" equiv-text=\\"{% endfor %}\\" id=\\"g-test\\"/>.</source>
      </trans-unit>
      <trans-unit id=\\"1\\">
        <source>X<x ctype=\\"liquid_Literal\\" equiv-text=\\"{% endfor %}\\" id=\\"g-test\\"/> cool.</source>
      </trans-unit>
    </body>
  </file>
</xliff>"
`;

exports[`renders xliff from markdown renders liquid variables wrapped in <x> tags 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"file.ext\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"file.skl\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"0\\">
        <source>Sentence with <x ctype=\\"liquid_Variable\\" equiv-text=\\"{{ variable }}\\" id=\\"g-test\\"/>.</source>
      </trans-unit>
      <trans-unit id=\\"1\\">
        <source><x ctype=\\"liquid_Variable\\" equiv-text=\\"{{variable}}\\" id=\\"g-test\\"/> sentence.</source>
      </trans-unit>
    </body>
  </file>
</xliff>"
`;

exports[`renders xliff from markdown renders plain text 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"file.ext\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"file.skl\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"0\\">
        <source>Предложение номер один.</source>
      </trans-unit>
      <trans-unit id=\\"1\\">
        <source>Предложение номер два.</source>
      </trans-unit>
    </body>
  </file>
</xliff>"
`;

exports[`renders xliff from markdown renders plain text sentences separated by newline 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"file.ext\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"file.skl\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"0\\">
        <source>Предложение номер один.</source>
      </trans-unit>
      <trans-unit id=\\"1\\">
        <source>Предложение номер два.</source>
      </trans-unit>
    </body>
  </file>
</xliff>"
`;

exports[`renders xliff from markdown renders ref links wrapped in <x> tags 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"file.ext\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"file.skl\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"0\\">
        <source>one</source>
      </trans-unit>
      <trans-unit id=\\"1\\">
        <source>Предложение номер <g ctype=\\"link\\" equiv-text=\\"[{#T}{{text}}](one.md &quot;%%%0%%%&quot;)\\" id=\\"g-test\\" x-begin=\\"[{#T}\\" x-end=\\"](one.md &quot;%%%0%%%&quot;)\\"></g>.</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>Предложение номер <g ctype=\\"link\\" equiv-text=\\"[{#T}{{text}}](two.md)\\" id=\\"g-test\\" x-begin=\\"[{#T}\\" x-end=\\"](two.md)\\"></g>.</source>
      </trans-unit>
    </body>
  </file>
</xliff>"
`;

exports[`renders xliff from markdown renders s wrapped in <x> tags 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"file.ext\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"file.skl\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"0\\">
        <source>Предложение номер <g ctype=\\"strikethrough\\" equiv-text=\\"~~{{text}}~~\\" id=\\"g-test\\" x-begin=\\"~~\\" x-end=\\"~~\\">один</g>.</source>
      </trans-unit>
      <trans-unit id=\\"1\\">
        <source>Предложение номер <g ctype=\\"strikethrough\\" equiv-text=\\"~~{{text}}~~\\" id=\\"g-test\\" x-begin=\\"~~\\" x-end=\\"~~\\">два</g>.</source>
      </trans-unit>
    </body>
  </file>
</xliff>"
`;

exports[`renders xliff from markdown renders samp wrapped in <x> tags 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"file.ext\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"file.skl\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"0\\">
        <source>Предложение номер <g ctype=\\"monospace\\" equiv-text=\\"##{{text}}##\\" id=\\"g-test\\" x-begin=\\"##\\" x-end=\\"##\\">один</g>.</source>
      </trans-unit>
      <trans-unit id=\\"1\\">
        <source>Предложение номер <g ctype=\\"monospace\\" equiv-text=\\"##{{text}}##\\" id=\\"g-test\\" x-begin=\\"##\\" x-end=\\"##\\">два</g>.</source>
      </trans-unit>
    </body>
  </file>
</xliff>"
`;

exports[`renders xliff from markdown renders sentences with abbreviations inside parenthesis 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"file.ext\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"file.skl\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"0\\">
        <source>Sentence (см. <g ctype=\\"link\\" equiv-text=\\"[{{text}}](file.md)\\" id=\\"g-test\\" x-begin=\\"[\\" x-end=\\"](file.md)\\">link</g>) continues.</source>
      </trans-unit>
      <trans-unit id=\\"1\\">
        <source>Another sentence.</source>
      </trans-unit>
    </body>
  </file>
</xliff>"
`;

exports[`renders xliff from markdown renders sentences with inline code that has liquid syntax inside 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"file.ext\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"file.skl\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"0\\">
        <source>Sentence <x ctype=\\"code_open\\" equiv-text=\\"\`\\" id=\\"g-test\\"/><x ctype=\\"liquid_Variable\\" equiv-text=\\"{{ ui-key.yacloud.common.label_tcp }}\\" id=\\"g-test\\"/> other<x ctype=\\"code_close\\" equiv-text=\\"\`\\" id=\\"g-test\\"/>.</source>
      </trans-unit>
      <trans-unit id=\\"1\\">
        <source>Another sentence <x ctype=\\"code_open\\" equiv-text=\\"\`\\" id=\\"g-test\\"/><x ctype=\\"liquid_Filter\\" equiv-text=\\"{{user.name | capitalize}}\\" id=\\"g-test\\"/> other<x ctype=\\"code_close\\" equiv-text=\\"\`\\" id=\\"g-test\\"/>.</source>
      </trans-unit>
    </body>
  </file>
</xliff>"
`;

exports[`renders xliff from markdown renders sentences with links in the end 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"file.ext\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"file.skl\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"0\\">
        <source>Инструкция содержит информацию о создании и настройке <g ctype=\\"link\\" equiv-text=\\"[{{text}}](concepts/desktops-and-groups.md)\\" id=\\"g-test\\" x-begin=\\"[\\" x-end=\\"](concepts/desktops-and-groups.md)\\">группы рабочих столов</g>.</source>
      </trans-unit>
      <trans-unit id=\\"1\\">
        <source>Если вы получили от администратора ссылку на <g ctype=\\"link\\" equiv-text=\\"[{{text}}](concepts/showcase.md)\\" id=\\"g-test\\" x-begin=\\"[\\" x-end=\\"](concepts/showcase.md)\\">витрину пользовательских рабочих столов</g>, перейдите к подразделу <g ctype=\\"link\\" equiv-text=\\"[{#T}{{text}}](#get-credentials)\\" id=\\"g-test\\" x-begin=\\"[{#T}\\" x-end=\\"](#get-credentials)\\"></g>.</source>
      </trans-unit>
    </body>
  </file>
</xliff>"
`;

exports[`renders xliff from markdown renders strong wrapped in <x> tags 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"file.ext\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"file.skl\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"0\\">
        <source>Предложение номер <g ctype=\\"bold\\" equiv-text=\\"**{{text}}**\\" id=\\"g-test\\" x-begin=\\"**\\" x-end=\\"**\\">один</g>.</source>
      </trans-unit>
      <trans-unit id=\\"1\\">
        <source>Предложение номер <g ctype=\\"bold\\" equiv-text=\\"**{{text}}**\\" id=\\"g-test\\" x-begin=\\"**\\" x-end=\\"**\\">два</g>.</source>
      </trans-unit>
    </body>
  </file>
</xliff>"
`;

exports[`renders xliff from markdown renders sup wrapped in <x> tags 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"file.ext\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"file.skl\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"0\\">
        <source>Предложение номер<g ctype=\\"sup\\" equiv-text=\\"^{{text}}^\\" id=\\"g-test\\" x-begin=\\"^\\" x-end=\\"^\\">один</g>.</source>
      </trans-unit>
      <trans-unit id=\\"1\\">
        <source>Предложение номер<g ctype=\\"sup\\" equiv-text=\\"^{{text}}^\\" id=\\"g-test\\" x-begin=\\"^\\" x-end=\\"^\\">два</g>.</source>
      </trans-unit>
    </body>
  </file>
</xliff>"
`;

exports[`renders xliff from markdown renders variable href link wrapped in <x> tags 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"file.ext\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"file.skl\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"0\\">
        <source>one</source>
      </trans-unit>
      <trans-unit id=\\"1\\">
        <source>Предложение номер <g ctype=\\"link\\" equiv-text=\\"[{{text}}]({{one}} &quot;%%%0%%%&quot;)\\" id=\\"g-test\\" x-begin=\\"[\\" x-end=\\"]({{one}} &quot;%%%0%%%&quot;)\\">один</g>.</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>Предложение номер <g ctype=\\"link\\" equiv-text=\\"[{{text}}]({{two}})\\" id=\\"g-test\\" x-begin=\\"[\\" x-end=\\"]({{two}})\\">два</g>.</source>
      </trans-unit>
    </body>
  </file>
</xliff>"
`;

exports[`renders xliff from markdown renders video wrapped in <x> tag 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"file.ext\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"file.skl\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"0\\">
        <source>Sentence goes here.</source>
      </trans-unit>
      <trans-unit id=\\"1\\">
        <source>Another sentence</source>
      </trans-unit>
    </body>
  </file>
</xliff>"
`;
